<resources>
    <string name="app_name">DTM</string>
    <string name="xizmat_haqida">Xizmat haqida</string>
    <string name="cancel_bottom_dialog">cancel bottom dialog</string>
    <string name="ruxsatnomani_olish">Ruxsatnomani olish</string>
    <string name="yangiliklar">Yangiliklar</string>
    <string name="abot_service">Xizmat haqida</string>
    <string name="service_application">Xizmat bo\'yicha arizilarim</string>

    <string name="temp_text">"asd asd asd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhf d asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfd asd asd k a fasdjf a.dnf a,dsf ajshd fjahsd fsdhf jasjdhf asjdhfas,dhf jad,\nshf asdhf ajsdhf a jsdhf ajhsd fjash dfjahsd fajhsd fajhds fajshdf as,dfh asjdhf ashdf ahjsd fahjs dfha,sd fhjasd fajsd fasdjh f,shadjf ajsdh \n\nfajsdhf asjdhf ajsdhf asjdhf asjdh <b>fasjdhf asljdhf asjdhf adsjh</b>></string>
    <string name="dtm">DTM</string>
    <string name="enter">Kirish</string>
    <string name="use_service">Xizmatdan foydalanish</string>
    <string name="owner_data">Shaxsiy ma\'lumotlar</string>
    <string name="news_letters">Axborotnomalar</string>
    <string name="all_service">Barcha xizmatlar</string>
    <string name="text1">Foydalanuvchi oldin ro\'yxatdan o\'tgan</string>
    <string name="text2">SMS yuborilmadi</string>
    <string name="text3">Login yoki parol noto\'g\'ri</string>
    <string name="text4">Foydalanuvchi topilmadi</string>
    <string name="text5">Telefon raqam xato kiritildi</string>
    <string name="text6">Parol xato kiritildi</string>
    <string name="text7">Misolni to\'g\'ri ishlab yoz</string>
    <string name="emptyText" />
    <string name="text8">Foydalanuvchi topilmadi</string>
    <string name="text9">tekshiruv kodi xato</string>
    <string name="fullname">FISH</string>
    <string name="birthday">Tug\'ilgan sana</string>
    <string name="jshshr">JShSHR</string>
    <string name="address">Doimiy yashash manzili</string>
    <string name="region">Viloyatingizni kiriting</string>
    <string name="district">Tumaningizni kiriting</string>
    <string name="passport_series">Passport yoki ID karta seriya va raqami</string>
    <string name="update_owner_data">Shaxsiy ma\'lumotlarni yangilash</string>
    <string name="confirm">Tasdiqlsh</string>
    <string name="application">Arizalarim</string>
    <string name="state">To\'lanmagan</string>
    <string name="account">Akkaunt</string>
    <string name="education">Umumta\'lim muassasasi</string>
    <string name="change_phone">Telefon raqamni o\'zgartirish</string>
    <string name="change_password">Parolni o\'zgartirish</string>
    <string name="langugae">Interfeys tili</string>
    <string name="logout">Tizimdan chiqish</string>
    <string name="owner_data_con">Qonun talablari doirasida shaxsga doir ma\'lumotlarimdan foydalanishga va ishlov berishga rozilik bildiraman</string>
    <string name="phone_number">Telefon raqam</string>
    <string name="password">Parol</string>
    <string name="ok">Ok</string>
</resources>