<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:letterSpacing=".04"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/new_font"
        android:text="@string/xizmat_haqida"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDismissDialog"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:padding="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:contentDescription="@string/cancel_bottom_dialog" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:fontFamily="@font/new_font"
        android:textSize="@dimen/_12sdp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/ruxsatnomani_olish"/>

</androidx.constraintlayout.widget.ConstraintLayout>