<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/back"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/back_style_image"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/arrow_back_svgrepo_com"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:fontFamily="@font/new_font"
        android:gravity="start"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintVertical_bias="0" />


    <LinearLayout

        android:id="@+id/regionLn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/back_style_search_in_dialog"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0">

        <EditText

            android:id="@+id/region"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/region"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/districtLn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/back_style_search_in_dialog"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionLn"
        app:layout_constraintVertical_bias="0">

        <EditText

            android:id="@+id/district"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/district"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>


    <LinearLayout

        android:id="@+id/addressLn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/back_style_search_in_dialog"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/districtLn"
        app:layout_constraintVertical_bias="0">

        <EditText

            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/district"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/button_background_1"
        android:text="Xizmatdan foydalanish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressLn"
        app:layout_constraintVertical_bias="0"
        app:layout_goneMarginTop="@dimen/_10sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>