<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/back"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/back_style_image"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/arrow_back_svgrepo_com"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/rasm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView

        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/fullname"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView

        android:id="@+id/firstName"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="Sohibqiron"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/fullName" />

    <TextView

        android:id="@+id/lastName"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="Qulliyev"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/firstName" />

    <TextView

        android:id="@+id/fatherName"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="Sohibqiron"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/lastName" />


    <TextView

        android:id="@+id/bornDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/birthday"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/fatherName" />

    <TextView

        android:id="@+id/birthday"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="1993-01-25"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/bornDate" />

    <TextView

        android:id="@+id/passportId"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/passport_series"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/birthday" />

    <TextView

        android:id="@+id/series"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="1993-01-25"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/passportId" />


    <TextView

        android:id="@+id/jshshr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/jshshr"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/series" />

    <TextView

        android:id="@+id/jShShR"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="1993-01-25"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/jshshr" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateOwnerData"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/button_background_1"
        android:text="Shaxsiy ma'lumotlarni yangilash"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jShShR" />


    <com.google.android.material.progressindicator.CircularProgressIndicator

        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>