<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/back"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/back_style_image"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/arrow_back_svgrepo_com"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/jshshr"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintVertical_bias="0" />

    <TextView

        android:id="@+id/jShShR"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back_style_search_in_dialog"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        android:text="1234567890"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintVertical_bias="0" />

    <TextView

        android:id="@+id/textP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/passport_series"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jShShR"
        app:layout_constraintVertical_bias="0" />


    <EditText

        android:id="@+id/series"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back_style_search_in_dialog"
        android:inputType="text"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="@id/textP"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textP"
        app:layout_constraintVertical_bias="0" />

    <EditText

        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back_style_search_in_dialog"
        android:inputType="number"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@id/series"
        app:layout_constraintRight_toRightOf="@id/jShShR"
        app:layout_constraintTop_toBottomOf="@id/textP"
        app:layout_constraintVertical_bias="0" />


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/updateOwnerData"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/button_background_1"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jShShR"
        app:layout_constraintVertical_bias="0.9" />


    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/lottieLoading"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:elevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />
</androidx.constraintlayout.widget.ConstraintLayout>